Bug 129416 - SKIA. White background color for menu separators
Summary: SKIA. White background color for menu separators
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.5.0
Keywords: possibleRegression
: 129439 (view as bug list)
Depends on:
Blocks: Skia
  Show dependency treegraph
 
Reported: 2019-12-15 18:20 UTC by Roman Kuznetsov
Modified: 2020-01-12 15:49 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Kuznetsov 2019-12-15 18:20:37 UTC
Description:
SKIA. White background color for menu separators

Steps to Reproduce:
1. Start Writer
2. Open any main menu
3. Look at white background under separators

Actual Results:
separators have white background

Expected Results:
separators have the same color as all items in the main menu


Reproducible: Always


User Profile Reset: No



Additional Info:
Версия: 6.5.0.0.alpha0+ (x64)
ID сборки: e26d89371f0e4f41476c9a99be01d98dedb76776
Потоков ЦП: 4; ОС:Windows 10.0 Build 17763; Отрисовка ИП: Skia/Vulkan; VCL: win; 
Локаль: ru-RU (ru_RU); Язык интерфейса: ru-RU
Calc: threaded
Comment 1 V Stuart Foote 2019-12-16 01:49:14 UTC
Not just the backing for the menu "separators" (all of which show a white backing), but also the background field for some of the place holders for menu icons-not all, just some--show a white background where no icon is assigned.

2019-12-14 TDF 77 build on Windows 10 Home
Version: 6.5.0.0.alpha0+ (x64)
Build ID: 113444f59dc7690850919155b9b164b1a686bbe7
CPU threads: 4; OS: Windows 10.0 Build 18362; UI render: Skia/Vulkan; VCL: win; 
Locale: en-US (en_US); UI-Language: en-US
Calc: threaded
Comment 2 Mike Kaganski 2019-12-17 06:09:32 UTC
*** Bug 129439 has been marked as a duplicate of this bug. ***
Comment 3 Mike Kaganski 2019-12-17 06:11:35 UTC
(In reply to V Stuart Foote from comment #1)
> but also the background field for some of the place holders for
> menu icons-not all, just some--show a white background where no icon is
> assigned.

I suppose it's unchecked checkboxes. Also some existing icons have white "shadow" (like a rectangle was cleared, and then slightly smaller image painted).
Comment 4 Commit Notification 2020-01-12 15:48:54 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/202146901b6fbab923042d30f62b19992bf5179b

finally fix Skia Windows widget drawing (tdf#129416)

It will be available in 6.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.